# agentlab

./: .gitignore  .pre-commit-config.yaml  DEVLOG.md  README.md  mypy.ini  payload.json  pyproject.toml  requirements.txt
.cursor/rules/: cursor-rules.mdc
.github/workflows/: ci.yml
agentlab/: __init__.py  cli.py  config_loader.py  evaluator.py  runner.py  scaffold.py
agentlab/llm/: ollama_client.py
agentlab/mocks/: tool_mocks.py
agentlab/tools/: __init__.py  base.py  registry.py
agentlab/tools/openapi/: ingest.py
agentlab/tools/runtime/: http_tool.py
agentlab/utils/: __init__.py  templates.py
blueprints/: demo.yaml  incident-triage.yaml  math.yaml  my-agent.yaml  petstore.yaml  summarizer.yaml
docs/: plugins.md
examples/plugins/agentlab_math_tools/: README.md  pyproject.toml
examples/plugins/agentlab_math_tools/src/agentlab_math_tools/: __init__.py  tools.py
tests/: test_cli_inputs.py  test_config_loader.py  test_evaluator_checks.py  test_openapi_ingester.py  test_plugin_integration.py  test_registry.py  test_runner_evaluator.py  test_runner_prompt_strip.py  test_templates.py  test_tool_plugins.py
tests/blueprints/: test_demo.py  test_my-agent.py
tests/fixtures/: petstore.yaml
